Update minor spacing issues for resume.

--- a/_sass/base/resume/_elements.scss
+++ b/_sass/base/resume/_elements.scss
@@ -55,7 +55,7 @@ ul {
 }
 
 li {
-  margin-bottom: 0.5em;
+  padding-bottom: 0.5em;
 }
 
 i {
